--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
    <!-- Custom CSS -->
    <link href="./assets/css/style.css" rel="stylesheet">
    <!-- You can change the theme colors from here -->
-   <link href="./assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+   <link href="./assets/css/colors/purple-dark.css" id="theme" rel="stylesheet">
 </head>
 <body class="fix-header card-no-border fix-sidebar">
 
@@ -47,9 +47,9 @@
     <!--Custom JavaScript -->
     <script src="./assets/js/custom.js"></script>
     <!-- ============================================================== -->
-    <!-- Style switcher -->
-    <!-- ============================================================== -->
-    <script src="./assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
+
+    <!--Evitar warnings del chart-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </body>
 </body>
 </html>
